--- a/lesson4/css/style.css
+++ b/lesson4/css/style.css
@@ -13,7 +13,7 @@ header img {
 
     position: relative;
 
-    left: 9px;
+    left: 50px;
 
     border: 7px solid #FFFFFF;
 
@@ -63,6 +63,8 @@ header h1 {
 
     font-size: 1.2em;
 
+    right: 50px;
+
 }
 
 header h3 {
@@ -73,7 +75,7 @@ header h3 {
 
     bottom: 10px;
 
-    left: 26px;
+    right: 24px;
 
     font-size: .9em;
 }
